--- a/Aula 11/Desafio.html
+++ b/Aula 11/Desafio.html
@@ -7,7 +7,23 @@
     <title>Desafio</title>
 </head>
 <body>
-    <h1>Você é Brasileiro ou Estrangeiro?</h1>
-    
+    <h1>Você é Brasileiro ou estrangeiro?</h1>
+    <p>Digite o país onde você vive</p>
+    <input type="text" name="txtpais" id="txtpais">
+    <input type="button" value="Checar" onclick="clicar()">
+    <div id="res"></div>
+
+    <script>
+        function clicar(){
+            var txtp = window.document.querySelector('input#txtpais')
+            var res = window.document.querySelector('div#res')
+            var pais = String(txtp.value)
+            if(pais == 'Brasil'){
+                res.innerHTML = "<p>Você está <strong>Brasileiro</strong></p>"
+            }else{
+                res.innerHTML = "<p>Você é <strong>Estrangeiro</strong></p>"
+            }
+        }
+    </script>
 </body>
 </html>
