--- a/Aula 11/Desafio.html
+++ b/Aula 11/Desafio.html
@@ -19,7 +19,7 @@
             var res = window.document.querySelector('div#res')
             var pais = String(txtp.value)
             if(pais == 'Brasil'){
-                res.innerHTML = "<p>Você está <strong>Brasileiro</strong></p>"
+                res.innerHTML = "<p>Você é <strong>Brasileiro</strong></p>"
             }else{
                 res.innerHTML = "<p>Você é <strong>Estrangeiro</strong></p>"
             }
