--- a/Aula 11/Desafio.html
+++ b/Aula 11/Desafio.html
@@ -18,10 +18,11 @@
             var txtp = window.document.querySelector('input#txtpais')
             var res = window.document.querySelector('div#res')
             var pais = String(txtp.value)
+            res.innerHTML = `<p>Você vive no <strong>${pais}</strong></p>`
             if(pais == 'Brasil'){
-                res.innerHTML = "<p>Você é <strong>Brasileiro</strong></p>"
+                res.innerHTML += "<p>Você é <strong>Brasileiro</strong></p>"
             }else{
-                res.innerHTML = "<p>Você é <strong>Estrangeiro</strong></p>"
+                res.innerHTML += "<p>Você é <strong>Estrangeiro</strong></p>"
             }
         }
     </script>
